# openring-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  bacon.toml  cliff-git-tag.toml  cliff.toml  codebook.toml  deny.toml  in.html  mise.toml  package.json  pnpm-lock.yaml
.changeset/: 304-validators.md  aggregate-skip-warning.md  before-boundary.md  bodyless-conditional.md  broken-pipe-exit.md  cache-store-graceful.md  chilly-nights-turn.md  clever-knives-bow.md  config.json  cyan-eggs-hammer.md  dark-words-draw.md  dedup-fetch-errors.md  derive-summary-from-page.md  deterministic-order.md  easy-paws-stand.md  empty-body-cache.md  feed-size-cap.md  fetch-concurrency-cap.md  granular-timeouts.md  great-snakes-judge.md  ip-host-title.md  non-utf8-feeds.md  per-source-most-recent.md  quiet-feeds-recover.md  redirect-warning.md  relative-href-resolution.md  retry-after-date.md  retry-gate-overflow.md  sanitize-decode-order.md  shared-http-client.md  shy-items-nail.md  skip-linkless-entries.md  slimmer-release-binaries.md  spicy-spiders-dream.md  store-lock-order.md  template-fail-fast.md  tera-2-compat-filters.md  url-file-diagnostics.md  warn-by-default.md  weighted-feed-rotation.md
.github/: dependabot.yml
.github/workflows/: audit.yml  binaries.yml  general.yml  release.yml  zizmor.yml
contrib/: _incr_version
contrib/aur/openring-rs/: PKGBUILD
contrib/aur/openring-rs-bin/: PKGBUILD
proptest-regressions/: cache.txt  feedfetcher.txt  lib.txt
src/: args.rs  cache.rs  config.rs  error.rs  feedfetcher.rs  lib.rs  main.rs  progress.rs  summarize.rs
tests/: broken_pipe.rs  fetch_concurrency.rs
