[package]
name = "openring"
version = "0.3.9"
edition = "2024"
authors = ["Luke Hsiao <luke@hsiao.dev>"]
description = "A webring for static site generators written in Rust"
repository = "https://github.com/lukehsiao/openring-rs"
homepage = "https://github.com/lukehsiao/openring-rs"
license = "BlueOak-1.0.0"
keywords = ["webring"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "4.1.2"
clap = { version = "4.5.53", features = ["derive", "wrap_help", "cargo"] }
clap-verbosity-flag = "3.0.4"
csv = "1.4.0"
dashmap = "6.1.0"
feed-rs = "2.3.1"
html-escape = "0.2.13"
humantime = "2.3.0"
indicatif = "0.18.3"
jiff = { version = "0.2.16", features = ["serde"] }
log = "0.4.28"
miette = { version = "7.6.0", features = ["fancy"] }
reqwest = { version = "0.13.1", features = ["gzip", "brotli", "zstd", "deflate"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tera = "1.20.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = { version = "2.5.7", features = ["serde"] }
yansi = { version = "1.0.1", features = ["detect-tty", "detect-env"] }
